# member-service

./: Cargo.toml  Dockerfile
src/lib/: env.rs  infrastructure.rs
src/lib/application/: http.rs  messaging.rs
src/lib/application/http/: auth.rs  handlers.rs  responses.rs
src/lib/application/http/handlers/: add_role_member.rs  get_members_guild.rs
src/lib/application/ports/: messaging_ports.rs
src/lib/domain/member/: events.rs  ports.rs  services.rs
src/lib/domain/member/entities/: error.rs  model.rs
src/lib/infrastructure/db/: firestore.rs
src/lib/infrastructure/member/db/: firestore_member_repository.rs
src/lib/infrastructure/messaging/: pubsub.rs
